[cfg] Implement ControlFlowGraph generation
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBK8LY

Co-authored-by: Peter Siket <peter.siket@huawei.com>
Signed-off-by: Laszlo Lango <laszlo.lango1@huawei.com>
Change-Id: Iaa842c93de010b179cc73de009b784466eb60010

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -168,6 +168,7 @@ libes2panda_sources = [
   "compiler/base/literals.cpp",
   "compiler/base/lreference.cpp",
   "compiler/base/optionalChain.cpp",
+  "compiler/core/CFG.cpp",
   "compiler/core/ETSCompiler.cpp",
   "compiler/core/ETSCompilerUnrechable.cpp",
   "compiler/core/ETSGen.cpp",
@@ -205,6 +206,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/boxedTypeLowering.cpp",
   "compiler/lowering/ets/boxingForLocals.cpp",
   "compiler/lowering/ets/capturedVariables.cpp",
+  "compiler/lowering/ets/cfgBuilderPhase.cpp",
   "compiler/lowering/ets/constStringToCharLowering.cpp",
   "compiler/lowering/ets/constantExpressionLowering.cpp",
   "compiler/lowering/ets/declareOverloadLowering.cpp",
@@ -230,6 +232,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/partialExportClassGen.cpp",
   "compiler/lowering/ets/promiseVoid.cpp",
   "compiler/lowering/ets/recordLowering.cpp",
+  "compiler/lowering/ets/setJumpTarget.cpp",
   "compiler/lowering/ets/spreadLowering.cpp",
   "compiler/lowering/ets/stringComparison.cpp",
   "compiler/lowering/ets/stringConstantsLowering.cpp",
