Refactor multierror of Statement in Parser
* Added BrokenStatement for processing error in parser
For a uniformity:
* Rename errorExpression to brokenExpression
* Rename errorTypeNode to brokenTypeNode
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBE1KQ
Signed-off-by: Mikhail Kaskov <kaskov.mikhail@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -277,7 +277,7 @@ libes2panda_sources = [
   "ir/base/tsMethodSignature.cpp",
   "ir/base/tsPropertySignature.cpp",
   "ir/base/tsSignatureDeclaration.cpp",
-  "ir/errorTypeNode.cpp",
+  "ir/brokenTypeNode.cpp",
   "ir/ets/etsClassLiteral.cpp",
   "ir/ets/etsFunctionType.cpp",
   "ir/ets/etsImportSource.cpp",
@@ -693,7 +693,7 @@ HEADERS_TO_BE_PARSED = [
   "ir/ts/tsTypeLiteral.h",
   "ir/ts/tsNumberKeyword.h",
   "ir/opaqueTypeNode.h",
-  "ir/errorTypeNode.h",
+  "ir/brokenTypeNode.h",
   "ir/base/scriptFunction.h",
   "ir/expressions/literal.h",
   "ir/ts/tsInterfaceDeclaration.h",
