Support Accessor with Receiver
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBF5NT?from=project-issue
Description: see in the issue.
Signed-off-by: xingshunxiang <xingshunxiang@huawei.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -211,6 +211,7 @@ libes2panda_sources = [
   "compiler/lowering/ets/enumPostCheckLowering.cpp",
   "compiler/lowering/ets/expandBrackets.cpp",
   "compiler/lowering/ets/expressionLambdaLowering.cpp",
+  "compiler/lowering/ets/extensionAccessorLowering.cpp",
   "compiler/lowering/ets/genericBridgesLowering.cpp",
   "compiler/lowering/ets/interfaceObjectLiteralLowering.cpp",
   "compiler/lowering/ets/interfacePropertyDeclarations.cpp",
