Implement struct for ArkUI
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBF9VH

Description:
Currently for struct feather, frontend mainly completes the parser
phase.
- In frontend program, we let ir::node structDeclaration extend ir::node
  classDeclaration, and treat it like classDeclaration in parser phase.
- The whole semantics of struct will be implemented by ArkUI team using
  plugin API in the futher.
- The node structDeclaration should be translated to classDeclaration at
  the first plugin API phase, and es2panda will report synatax error at
  'initScopesPhaseEts' phase if struct Declaration is not translated to
  classDeclaration at 'pluginAfterParse' phase.

Tested-by:
ninja tests (passed)
ets_testrunner (passed)

Signed-off-by: tengtengh <tenghao9@huawei.com>

--- a/ets2panda/test/unit/public/CMakeLists.txt
+++ b/ets2panda/test/unit/public/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Huawei Device Co., Ltd.
+# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -51,6 +51,12 @@ ets2panda_add_gtest(ast_verifier_test_3
         ast_verifier_getter_setter_neg_test.cpp
         ast_verifier_check_scope_declaration_test.cpp
     TEST_GROUP qemu_excluded_gtests
+)
+
+ets2panda_add_gtest(ast_verifier_test_4
+        CPP_SOURCES
+        ast_verifier_check_struct_declaration_test.cpp
+        TEST_GROUP qemu_excluded_gtests
 )
 
 if (NOT PANDA_QEMU_BUILD)
