--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -1,5 +1,5 @@
 
-# Copyright (c) 2024 Huawei Device Co., Ltd.
+# Copyright (c) 2024-2025 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -206,6 +206,8 @@ options:
 - name: verifier-invariants
   description: Select invariants for AST-verifier to check.
   enum: &VerifierInvariants
+    AfterPluginsAfterParse:
+    - CheckStructDeclaration
     AfterScopesInitPhase:
     - NodeHasParent
     - NodeHasSourceRange
@@ -244,6 +246,7 @@ options:
     # - CheckConstProperties
     # - CheckInfiniteLoop
     # - CheckScopeDeclaration
+    - CheckStructDeclaration
     - EveryChildHasValidParent
     # - EveryChildInParentRange
     - ForLoopCorrectlyInitialized
