Update prefixes for Callable Classes
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBFBFO

Reason:
According to spec, prefix $_ is added to function invoke and instantiate of callable classes.

wDescription:
Update functions name to confirm to spec.

Signed-off-by: wangyuxin <wangyuxin53@huawei.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -124,11 +124,11 @@ defines:
     ref: DYNAMIC_MODULE_CLASS_INIT
   - name: $lambdaobject
     ref: LAMBDA_OBJECT
-  - name: invoke
+  - name: $_invoke
     ref: LAMBDA_OBJECT_INVOKE
-  - name: invoke
+  - name: $_invoke
     ref: STATIC_INVOKE_METHOD
-  - name: instantiate
+  - name: $_instantiate
     ref: STATIC_INSTANTIATE_METHOD
   - name: undefined
     ref: UNDEFINED
