--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -16,6 +16,7 @@ set(ES2PANDA_LSP_SRC
   ./src/classifier.cpp
   ./src/internal_api.cpp
   ./src/cancellation_token.cpp
+  ./src/quick_info.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
