--- a/ets2panda/test/unit/public/CMakeLists.txt
+++ b/ets2panda/test/unit/public/CMakeLists.txt
@@ -54,5 +54,5 @@ ets2panda_add_gtest(ast_verifier_test_3
 )
 
 if (NOT PANDA_QEMU_BUILD)
-    add_dependencies(gtests qemu_excluded_gtests)
+    add_dependencies(es2panda_gtests qemu_excluded_gtests)
 endif()
