--- a/ets2panda/public/ignoredAllowed.yaml
+++ b/ets2panda/public/ignoredAllowed.yaml
@@ -34,6 +34,7 @@ ignored_list:
       - name: ETSChecker
       - name: ETSParser
       - name: NumberLiteral
+      - name: VerifiedType
 
 
   # Which methods should not be generated
