[ETS] Refactor unit tests
1. Handle 'Context' using RAII (so it is destroyed automatically).
2. Change visibility of 'impl_', 'ctx_' and etc. to 'private'.

Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBJ6JM
Signed-off-by: Daniel Kofanov <kofanov.daniil@huawei-partners.com>

--- a/ets2panda/test/unit/lowerings/CMakeLists.txt
+++ b/ets2panda/test/unit/lowerings/CMakeLists.txt
@@ -21,27 +21,6 @@ ets2panda_add_gtest(scopes_initialization_test
 ets2panda_add_gtest(string_constants_test
     CPP_SOURCES string_constants.cpp
 )
-ets2panda_add_gtest(const_expression_1_test
-    CPP_SOURCES const_expression_1.cpp
-)
-ets2panda_add_gtest(const_expression_2_test
-    CPP_SOURCES const_expression_2.cpp
-)
-ets2panda_add_gtest(const_expression_3_test
-    CPP_SOURCES const_expression_3.cpp
-)
-ets2panda_add_gtest(const_expression_4_test
-    CPP_SOURCES const_expression_4.cpp
-)
-ets2panda_add_gtest(const_expression_5_test
-    CPP_SOURCES const_expression_5.cpp
-)
-ets2panda_add_gtest(const_expression_6_test
-    CPP_SOURCES const_expression_6.cpp
-)
-ets2panda_add_gtest(const_expression_7_test
-    CPP_SOURCES const_expression_7.cpp
-)
-ets2panda_add_gtest(const_expression_8_test
-    CPP_SOURCES const_expression_8.cpp
+ets2panda_add_gtest(const_expression_test
+    CPP_SOURCES const_expression.cpp
 )
