[LSP API] GetCurrentTokenValue
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBFAED
Signed-off-by: yaohaosen <yaohaosen@huawei.com>

--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -14,3 +14,7 @@
 ets2panda_add_gtest(lsp_api_test
     CPP_SOURCES lsp_api_test.cpp
 )
+
+ets2panda_add_gtest(lsp_public_api_test
+    CPP_SOURCES lsp_public_api_test.cpp
+)
