Fix segfault plugin ts mode
Issue:
https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBJ6ZG

Signed-off-by: Zhelyapov Aleksey <zhelyapov.aleksey@huawei-partners.com>

--- a/ets2panda/test/unit/plugin/CMakeLists.txt
+++ b/ets2panda/test/unit/plugin/CMakeLists.txt
@@ -42,6 +42,7 @@ set(PLUGIN_TESTS
     "e2p_test_plugin_after_bind compile.sts ${EXPECTED_MODE} cpp ${LIBRARY_PLUGIN}"
     "plugin_proceed_to_state compile.sts ${EXPECTED_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_update_statements compile.sts ${RUNTIME_MODE} cpp ${EXECUTABLE_PLUGIN}"
+    "plugin_proceed_to_state_ts_mode compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_update_statements_lambda compile.sts ${RUNTIME_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_change_func runtime_change_func_call.sts ${RUNTIME_MODE} cpp ${EXECUTABLE_PLUGIN}"
     "plugin_proceed_to_state_change_call_lambda compile.sts ${COMPILE_MODE} cpp ${EXECUTABLE_PLUGIN}"
@@ -106,7 +107,7 @@ foreach(TEST_DATA IN ITEMS ${PLUGIN_TESTS})
                 LD_LIBRARY_PATH=${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ${PANDA_RUN_PREFIX}
                 ${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME} $<TARGET_FILE:es2panda>
                 --extension=sts --ets-unnamed --output="${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.abc"
-                "${CMAKE_CURRENT_SOURCE_DIR}/${TEST_STS_FILE}" > "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.out"
+                "${CMAKE_CURRENT_SOURCE_DIR}/${TEST_STS_FILE}" > "${CMAKE_CURRENT_BINARY_DIR}/${TEST_NAME}.out" 2>&1
         )
     endif()
     add_dependencies(es2panda-plugin-test-compile-${TEST_NAME} es2panda ${TEST_NAME} es2panda-lib)
