Title: Implement findReferences
Description: Finds references to a token at a given position in a file
within a list of source files. Returns map with file paths and the
list of positions for the references in that file.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBL7ND?from=project-issue
Testing: Added 9 different test cases. The scenarios are a combination
of function call expressions, function definitions, import name specifiers, new class instance
creation, class definition, variable definition, usage of variable.

Signed-off-by: Muhammet Fevzi Bayiroglu <muhammet.fevzi.bayiroglu@h-partners.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -19,6 +19,7 @@ set(ES2PANDA_LSP_SRC
   ./src/quick_info.cpp
   ./src/references.cpp
   ./src/get_adjusted_location.cpp
+  ./src/find_references.cpp
 )
 
 panda_add_library(${LSP_LIB} SHARED ${ES2PANDA_LSP_SRC})
