--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -39,3 +39,7 @@ ets2panda_add_gtest(lsp_api_diagnostics_test CPP_SOURCES
 ets2panda_add_gtest(lsp_api_get_adjusted_location_test CPP_SOURCES
     get_adjusted_location_test.cpp
 )
+
+ets2panda_add_gtest(lsp_api_test_find_references CPP_SOURCES
+    find_references_test.cpp
+)
