--- a/ets2panda/CMakeLists.txt
+++ b/ets2panda/CMakeLists.txt
@@ -265,6 +265,7 @@ set(ES2PANDA_LIB_SRC
   compiler/lowering/ets/defaultParameterLowering.cpp
   compiler/lowering/ets/objectLiteralLowering.cpp
   compiler/lowering/ets/interfaceObjectLiteralLowering.cpp
+  compiler/lowering/ets/implicitThisLowering.cpp
   compiler/lowering/ets/stringComparison.cpp
   compiler/lowering/ets/stringConstantsLowering.cpp
   compiler/lowering/ets/stringConstructorLowering.cpp
