[ASTVerifier] Introduce 'NoPrimitiveTypes'
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBJUQR
Signed-off-by: Daniel Kofanov <kofanov.daniil@huawei-partners.com>

--- a/ets2panda/util/options.yaml
+++ b/ets2panda/util/options.yaml
@@ -217,6 +217,7 @@ options:
     - VariableHasScope
     AfterCheckerPhase:
     - NodeHasType
+    - NoPrimitiveTypes
     - IdentifierHasVariable
     - ReferenceTypeAnnotationIsNull
     - ArithmeticOperationValid
@@ -257,6 +258,7 @@ options:
     - NodeHasParent
     # - NodeHasSourceRange
     - NodeHasType
+    - NoPrimitiveTypes
     - ReferenceTypeAnnotationIsNull
     - SequenceExpressionHasLastType
     - VariableHasEnclosingScope
