Make nested type syntax error more helpful
Fixes #21381 internal issue.

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/IBJUIQ

Change-Id: I36175089ce90516794a1beefbf3d43d5ea6095f9
Signed-off-by: Peter Pronai <peter.pronai.hlab@gmail.com>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -15,3 +15,11 @@ syntax:
 - name: MISSING_TYPE_ANNOTATION
   id: 1
   message: Missing type annotation for property{}.
+
+- name: IMPROPER_NESTING_CLASS
+  id: 2
+  message: Unexpected token. A constructor, method, accessor, or property was expected.
+
+- name: IMPROPER_NESTING_INTERFACE
+  id: 3
+  message: Property or signature expected.
